--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aniso8601==8.0.0
 astroid==2.4.2
 click==7.1.2
+dominate==2.5.1
 Flask==1.1.2
 flask-mongoengine==0.9.5
 Flask-RESTful==0.3.8
@@ -12,6 +13,8 @@ lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 mongoengine==0.20.0
+pep8==1.7.1
+pycodestyle==2.6.0
 pylint==2.5.3
 pylint-django==2.0.15
 pylint-mongoengine==0.4.0
@@ -21,6 +24,7 @@ python-dotenv==0.13.0
 pytz==2020.1
 six==1.15.0
 toml==0.10.1
+visitor==0.1.3
 Werkzeug==1.0.1
 wrapt==1.12.1
 WTForms==2.3.1
