--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==1.1.2
 flask-mongoengine==0.9.5
 Flask-RESTful==0.3.8
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
